# Squirrel

./: Pipfile  README.md  docker-compose.yaml  query.txt  squirrel.py
squirrel-cli/: Cargo.toml
squirrel-cli/src/: main.rs
