[package]
name = "squirrel-cli"
version = "0.1.0"
authors = ["Galen Guyer <galen@galenguyer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.mongodb]
version = "2.0.0-beta.1"
default-features = false
features = ["sync"]
